<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/get_otp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textFontWeight="500"
        android:lineHeight="21.78dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_nphone_number"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textFontWeight="800"
        android:lineHeight="36.31dp"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:layout_marginStart="40dp"
        tools:targetApi="p" />

    <EditText
        android:id="@id/et_countryCode"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="8dp"
        android:textSize="20sp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:inputType="text"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@id/et_modileNo"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:padding="8dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        app:layout_constraintStart_toEndOf="@id/et_countryCode"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginStart="10dp"
        android:inputType="number"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Continue"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/et_countryCode"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textFontWeight="700"
        android:lineHeight="16.94dp"
        app:backgroundTint="@null"
        android:text="@string/continue1"
        android:fontFamily="@font/inter_medium"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/rectangle_3"

        tools:targetApi="p" />







</androidx.constraintlayout.widget.ConstraintLayout>